# SlovenianLemmatizer

./: .travis.yml  CMakeLists.txt  README.md  pom.xml  setup.py
python/lemmagen/: __init__.py  libLemmagen.pyx
src/: RdrLemmatizer.h  lemmagen.cpp  lemmagen.h  main.cpp  sl_lemmatizer_java.cpp
test/: lemmagen.cpp
